system/kustomize/metal-operator-remote/host/base/manager-webhook-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  template:
    spec:
      containers:
        - name: manager
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          volumeMounts:
            - name: webhook-certs
              mountPath: /tmp/k8s-webhook-server/serving-certs
              readOnly: true
            - name: macdb
              mountPath: /etc/macdb
      volumes:
        - name: webhook-certs
          emptyDir: {}
        - name: macdb
          secret:
            secretName: macdb
