system/kustomize/metal-operator-remote/host/base/metal-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metal-operator-metal-registry-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: metal-operator-remote
    control-plane: controller-manager
  ports:
    - port: 10000
      protocol: TCP
      targetPort: 10000
