system/kustomize/metal-operator-remote/host/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metalapi-ingress-to-metal-operator-metal-registry-service-tcp-10000
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 10000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: metal-operator
      control-plane: controller-manager
